src/test/resources/typeSystemTestModels/invalid/classes/ClassNoFinalSuperClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

import java.lang.String;

public class ClassNoFinalSuperClass extends String {

}
